# dagster-xml-example

./: .gitignore  README.md  pipeline.py  pipeline_json.py  pipeline_xml.py  pyproject.toml  schema.py  show_parquet.py
data/json/: objects.json  terminology.json
data/objects/: OBJ-001.xml  OBJ-003.xml
data/xml/: terminology.xml
data/xml/objects/: OBJ-002.xml  OBJ-004.xml  OBJ-005.xml
scripts/: bench_schema.py  debug_harvest.py  gen_bench_data.py  test_nested_checks.py  test_xmltodict.py
