[project]
name = "dagster-xml-example"
version = "0.1.0"
description = "Dagster XML example: XML → Polars → Parquet → JSON"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandera>=0.29.0",
    "polars>=1.38.1",
    "xmltodict>=1.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.16",
]
